# lctes21

./: .gitattributes  README.md
benchmarks/mibench/bitcount/: system.elf  trace.pb
benchmarks/mibench/blowfish_dec/: system.elf  trace.pb
benchmarks/mibench/blowfish_enc/: system.elf  trace.pb
benchmarks/mibench/qsort/: trace.pb
benchmarks/mibench/rijndael_dec/: system.elf  trace.pb
benchmarks/mibench/rijndael_enc/: system.elf  trace.pb
benchmarks/mibench/sha/: system.elf  trace.pb
benchmarks/micro/fib/: system.elf  trace.pb
benchmarks/micro/loopsum/: system.elf  trace.pb
benchmarks/micro/mixed/: system.elf  trace.pb
benchmarks/micro/qsort/: system.elf  trace.pb
benchmarks/micro/qsort_iter/: system.elf  trace.pb
database-dumps/: mibench_plain.sql  micro_plain.sql  reset_mibench_database.sh  reset_micro_database.sh
evaluation-queries/: analysis.sql  validate.sql
failstar/: README.md
failstar/build-prebuild/: CMakeCache.txt  CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake
failstar/build-prebuild/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
failstar/build-prebuild/tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake
failstar/cmake/: compilerconfig.cmake
failstar/configurations/: x86_pruning_capstone.sh
failstar/simulators/bochs/: Makefile  bxversion.rc  config.h  config.status  libtool  ltdlconf.h
failstar/simulators/bochs/cpu/: Makefile
failstar/tools/prune-trace/: CMakeLists.txt  DataFlowPruner.cc  DataFlowPruner.hpp  main.cc
pruning-scripts/: dataflow_pruning_mibench.sh  dataflow_pruning_micro.sh
(+72 files in other folders)
